--- a/comptecourant/src/main/resources/application.properties
+++ b/comptecourant/src/main/resources/application.properties
@@ -1,2 +1,33 @@
-spring.application.name=comptecourant
-server.port=8081
+# ===============================
+# CONFIGURATION DU SERVEUR
+# ===============================
+server.port=8080
+
+# ===============================
+# CONFIGURATION DE LA BASE DE DONNEES (PostgreSQL)
+# ===============================
+spring.datasource.url=jdbc:postgresql://localhost:5432/sys_banque
+spring.datasource.username=postgres
+spring.datasource.password=wxcvbn3227
+
+# Driver PostgreSQL
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# ===============================
+# JPA / HIBERNATE
+# ===============================
+# DDL auto (création/mise à jour des tables) -> update / create / validate
+spring.jpa.hibernate.ddl-auto=update
+
+# Dialecte PostgreSQL
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Pour voir les requêtes SQL dans la console
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# ===============================
+# LOGGING
+# ===============================
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
