--- a/pret/src/main/resources/application.properties
+++ b/pret/src/main/resources/application.properties
@@ -1,2 +1,18 @@
 spring.application.name=pret
-server.port=8082
+server.port=8080
+
+# ===============================
+# BASE DE DONNEES (PostgreSQL)
+# ===============================
+spring.datasource.url=jdbc:postgresql://localhost:5432/sys_banque
+spring.datasource.username=postgres
+spring.datasource.password=wxcvbn3227
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# ===============================
+# JPA / HIBERNATE
+# ===============================
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
